infrastructure/aws/cloudformation/csye6225-cf-application.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Ec2 block device mapping",
    "Resources": {
        "WebInstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allow http to client host",
                "VpcId": {
                    "Fn::ImportValue": "Networking-VpcId"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":8080,
                        "ToPort":8080,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "csye6225-webapp"
                    }
                ]
            }
        },
        "DbInstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "VPC Security Group for RDS",
                "VpcId": {
                    "Fn::ImportValue": "Networking-VpcId"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 3306,
                        "ToPort": 3306,
                        "SourceSecurityGroupId": {
                            "Ref": "WebInstanceSecurityGroup"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "csye6225-rds"
                    }
                ]
            }
        },
        "MyEC2Instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": "ami-9887c6e7",
                "InstanceType": "t2.micro",
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "\n",
                            [
                                "#!/bin/bash -xe",
                                "sudo yum update -y",
                                "sudo yum install ruby ntp python wget java-1.8.0-openjdk-devel -y",
                                "sudo wget https://aws-codedeploy-us-east-1.s3.amazonaws.com/latest/install",
                                "sudo chmod +x ./install",
                                "sudo ./install auto",
                                "sudo service codedeploy-agent start",
                                "systemctl start ntpd",
                                "systemctl enable ntpd",
                                "groupadd tomcat",
                                "useradd -M -s /bin/nologin -g tomcat -d /opt/tomcat tomcat",
                                "cd /tmp",
                                "wget http://apache.mirrors.pair.com/tomcat/tomcat-8/v8.5.34/bin/apache-tomcat-8.5.34.tar.gz",
                                "mkdir /opt/tomcat",
                                "tar xvf apache-tomcat-8*tar.gz -C /opt/tomcat --strip-components=1",
                                "rm -rf *.gz",
                                "cd /opt/tomcat",
                                "chgrp -R tomcat /opt/tomcat",
                                "chmod -R g+r conf",
                                "chmod g+x conf",
                                "chown -R tomcat webapps/ work/ temp/ logs/ conf/",
                                "sudo touch bin/setenv.sh",
                                "sudo chmod 777 bin/setenv.sh",
                                "sudo echo 'export USERNAME=csye6225master' >> bin/setenv.sh",
                                "sudo echo 'export PASSWORD=csye6225password' >> bin/setenv.sh",
                                "sudo echo 'export DIALECT=org.hibernate.dialect.MySQLDialect' >> bin/setenv.sh",
                                "sudo echo 'export DRIVER=com.mysql.jdbc.Driver' >> bin/setenv.sh",
                                "sudo echo 'export SPRING_PROFILES_ACTIVE=aws' >> bin/setenv.sh",
                                {
                                  "Fn::Join": [
                                    "",
                                    [
                                      "sudo echo 'export URL=jdbc:mysql://",
                                      {
                                        "Fn::GetAtt": [
                                          "MyDB",
                                          "Endpoint.Address"
                                        ]
                                      },
                                      ":3306/csye6225' >> bin/setenv.sh"
                                    ]
                                  ]
                                },
                                {
                                  "Fn::Join": [
                                    "",
                                    [
                                      "sudo echo 'export BUCKETNAME=",
                                      {"Ref" : "RecordServiceS3Bucket"},
                                      "' >> bin/setenv.sh"
                                    ]
                                  ]
                                },
                                "cd /usr/lib/systemd/system",
                                "touch tomcat.service",
                                "echo '[Unit]' > tomcat.service",
                                "echo 'Description=Apache Tomcat Web Application Container' >> tomcat.service",
                                "echo 'After=syslog.target network.target' >> tomcat.service",
                                "echo '[Service]' >> tomcat.service",
                                "echo 'Type=forking' >> tomcat.service",
                                "echo 'Environment=JAVA_HOME=/usr/lib/jvm/jre' >> tomcat.service",
                                "echo 'Environment=CATALINA_PID=/opt/tomcat/temp/tomcat.pid' >> tomcat.service",
                                "echo 'Environment=CATALINA_HOME=/opt/tomcat' >> tomcat.service",
                                "echo 'Environment=CATALINA_BASE=/opt/tomcat' >> tomcat.service",
                                "echo 'Environment=\"CATALINA_OPTS=-Xms512M -Xmx1024M -server -XX:+UseParallelGC\"' >> tomcat.service",
                                "echo 'ExecStart=/opt/tomcat/bin/startup.sh' >> tomcat.service",
                                "echo 'ExecStop=/bin/kill -15 $MAINPID' >> tomcat.service",
                                "echo 'User=tomcat' >> tomcat.service",
                                "echo 'Group=tomcat' >> tomcat.service",
                                "echo 'UMask=0007' >> tomcat.service",
                                "echo 'RestartSec=10' >> tomcat.service",
                                "echo 'Restart=always' >> tomcat.service",
                                "echo '[Install]' >> tomcat.service",
                                "echo 'WantedBy=multi-user.target' >> tomcat.service",
                                "systemctl daemon-reload",
                                "systemctl enable tomcat.service",
                                "systemctl start tomcat.service"
                            ]
                        ]
                    }
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "WebInstanceSecurityGroup"
                    }
                ],
                "KeyName": "csye6225",
                "SubnetId": {
                    "Fn::ImportValue": "Networking-SubnetId"
                },
                "IamInstanceProfile": {
                    "Fn::ImportValue": "cicdInstanceProfile"
                },
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sdm",
                        "Ebs": {
                            "VolumeType": "gp2",
                            "DeleteOnTermination": "true",
                            "VolumeSize": "20"
                        }
                    },
                    {
                        "DeviceName": "/dev/sdk",
                        "NoDevice": {}
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "csye6225-ec2"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "MyDynamoDBTable": {
            "Type": "AWS::DynamoDB::Table",
            "Properties": {
                "AttributeDefinitions": [
                    {
                        "AttributeName": "Id",
                        "AttributeType": "S"
                    }
                ],
                "KeySchema": [
                    {
                        "AttributeName": "Id",
                        "KeyType": "HASH"
                    }
                ],
                "ProvisionedThroughput": {
                    "ReadCapacityUnits": "5",
                    "WriteCapacityUnits": "5"
                },
                "TableName": "csye6225",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "csye6225-DynamoDB"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "RecordServiceS3Bucket": {
            "Type": "AWS::S3::Bucket",
            "Properties": {
                "BucketName": {
                    "Fn::ImportValue": "s3BucketNameWebApi"
                }
            }
        },
        "myDBSubnetGroup": {
            "Type": "AWS::RDS::DBSubnetGroup",
            "Properties": {
                "DBSubnetGroupDescription": "Db Subnet Group",
                "SubnetIds": [
                    {
                        "Fn::ImportValue": "Networking-SubnetId"
                    },
                    {
                        "Fn::ImportValue": "Networking-SubnetId2"
                    }
                ]
            }
        },
        "MyDB": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "DBName": "csye6225",
                "DBInstanceClass": "db.t2.medium",
                "MultiAZ": "false",
                "DBInstanceIdentifier": "csye6225-fall2018",
                "DBSubnetGroupName": {
                    "Ref": "myDBSubnetGroup"
                },
                "Engine": "MySQL",
                "EngineVersion": "5.5.59",
                "MasterUsername": "csye6225master",
                "MasterUserPassword": "csye6225password",
                "PubliclyAccessible": "false",
                "AllocatedStorage": "20",
                "VPCSecurityGroups": [
                    {
                        "Fn::GetAtt": [
                            "DbInstanceSecurityGroup",
                            "GroupId"
                        ]
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "My SQL Database"
                    }
                ]
            }
        }
    }
}
